Refactored Actions Validation